--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: ruby
 bundler_args: --without development
 rvm:
-  - 1.9.3
   - 2.0.0
   - 2.1.1
+  - 2.2
+env:
+  - APN_MULTIPLE_APPS=false
+  - APN_MULTIPLE_APPS=true
 script: rspec spec
 gemfile:
   - Gemfile
